# bazel-pandoc

./: .cirrus.yml  BUILD.bazel  COPYING  README.md  WORKSPACE  pandoc.bzl  repositories.bzl  stylesheet.css  toolchain.bzl
sample/: BUILD.bazel  README.md
