load(":toolchain.bzl", "pandoc_toolchain")
load(":pandoc.bzl", "PANDOC_EXTENSIONS", "pandoc")

exports_files(["README.md"])

# Precompiled Pandoc binaries provided by upstream.

toolchain_type(
    name = "pandoc_toolchain_type",
    visibility = ["//visibility:public"],
)

pandoc_toolchain(
    exec_compatible_with = [
        "@bazel_tools//platforms:linux",
        "@bazel_tools//platforms:x86_64",
    ],
    platform = "linux",
)

pandoc_toolchain(
    exec_compatible_with = [
        "@bazel_tools//platforms:osx",
        "@bazel_tools//platforms:x86_64",
    ],
    platform = "macOS",
)

pandoc_toolchain(
    exec_compatible_with = [
        "@bazel_tools//platforms:windows",
        "@bazel_tools//platforms:x86_32",
    ],
    platform = "windows-i386",
)

pandoc_toolchain(
    exec_compatible_with = [
        "@bazel_tools//platforms:windows",
        "@bazel_tools//platforms:x86_64",
    ],
    platform = "windows-x86_64",
)
