load("//:pandoc.bzl", "PANDOC_EXTENSIONS", "pandoc")

# Simplest possible example, where the to_format is specified
pandoc(
    name = "readme1",
    src = "//:README.md",
    to_format = "asciidoc",
)

# Simplest possible example, where the output is specified
pandoc(
    name = "readme2",
    src = "//:README.md",
    output = "readme2.html",
)

# Conversion of README to various formats for testing.
[pandoc(
    name = "readme_" + fmt,
    src = "//:README.md",
    from_format = "markdown",
    to_format = fmt,
) for fmt in PANDOC_EXTENSIONS.keys()]
