load("//:pandoc.bzl", "PANDOC_EXTENSIONS", "pandoc")

# Conversion of README to various formats for testing.
[pandoc(
    name = "readme_" + fmt,
    src = "//:README.md",
    css = "//:stylesheet.css",
    from_format = "markdown",
    to_format = fmt,
) for fmt in PANDOC_EXTENSIONS.keys()]

# You can also specify the output, the format is then inferred from the extension,
# and the rule name is not used.
pandoc(
    name = "gen_html_page",
    src = "//:README.md",
    output = "index.html",
)
